# tmux-sysmon

./: .gitignore  Cargo.toml  README.md  tmux-sysmon.tmux
src/: battery.rs  cpu.rs  disk.rs  main.rs  mem.rs
src/util/: format.rs  mod.rs  platform.rs
