[package]
name = "tmux-sysmon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Tmux plugin to monitor system resources."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
battery = "0.7"
humansize = "2.1"
anyhow = "1.0"
thiserror = "2.0.17"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rstest = "0.26.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"